Only require category in form if module enabled and only validate model if project has categories defined

--- a/app/views/issues/_attributes.html
+++ b/app/views/issues/_attributes.html
@@ -10,7 +10,7 @@
 <p><%= f.select :priority_id, (@priorities.collect {|p| [p.name, p.id]}), {:required => true}, :disabled => !@issue.leaf? %></p>
 <p><%= f.select :assigned_to_id, (@issue.assignable_users.collect {|m| [m.name, m.id]}), :include_blank => true %></p>
 <% unless @project.issue_categories.empty? %>
-<p><%= f.select :category_id, (@project.issue_categories.collect {|c| [c.name, c.id]}), :required => true, :include_blank => true %>
+<p><%= f.select :category_id, (@project.issue_categories.collect {|c| [c.name, c.id]}), :required => @project.module_enabled?(:categories_required), :include_blank => true %>
 <%= prompt_to_remote(image_tag('add.png', :style => 'vertical-align: middle;'),
                      l(:label_issue_category_new),
                      'category[name]',
